syntax = "proto3";

package proto;

option go_package = "github.com/limechain/hedera-eth-bridge-validator/proto";

message CryptoTransferMessage {
  string transactionId = 1;
  string ethAddress = 2;
  uint64 amount = 3;
  uint64 fee = 4;
}