syntax = "proto3";

package proto;

option go_package = "github.com/limechain/hedera-eth-bridge-validator/proto";

message TopicEthSignatureMessage {
  string transferID = 1; // The transaction Id of the initial Hedera Transfer
  string routerAddress = 2; // The router address to which the message will be submitted
  string wrappedAsset = 3; // The wrapped eth token
  string receiver = 4; // The receiver of the initial Hedera Transfer Memo
  string amount = 5; // The amount of the initial Hedera Transfer
  string signature = 6; // The signature of the validator
  int64 transactionTimestamp = 7; // The timestamp of the Hedera Transfer
}