syntax = "proto3";

package proto;

option go_package = "github.com/limechain/hedera-eth-bridge-validator/proto";

import "topic_eth_signature_message.proto";

// TopicMessage
message TopicMessage {
  TopicEthSignatureMessage topicSignatureMessage = 1;
  int64 transactionTimestamp = 2;
}